@@ -1,2 +1,6 @@
 # drytron_app
 Projeto_integrador_III
+
+NÃO ESQUECER:
+
+--module-path "C:\Program Files\Java\javafx-sdk-18.0.1\lib" --add-modules=javafx.controls,javafx.fxml
